# drf_practice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg  uwsgi.ini
.deploy/: Dockerfile  uwsgi.ini
.github/workflows/: linter.yml  linters.yml  main.yml  tests.yml
api/: models.py  tests.py  urls.py  views.py
api/core/: constant.py
api/signup/: serializer.py  urls.py  views.py
api2/: urls.py
api2/signup/: models.py  serializer.py  urls.py  views.py
config/: urls.py  wsgi.py
config/settings/: base.py  local.py
project/api/: serializer.py  urls.py  views.py
project/api/signup/: serializer.py  urls.py  views.py
project/config/: settings.py  urls.py
project/polls/: models.py
project/polls/migrations/: 0001_initial.py
