[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Takaaki Suzuki <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
